noctalia: show network stats

--- a/config/gui/noctalia-shell/settings.json
+++ b/config/gui/noctalia-shell/settings.json
@@ -62,7 +62,7 @@
                     "showDiskUsage": false,
                     "showMemoryAsPercent": false,
                     "showMemoryUsage": true,
-                    "showNetworkStats": false,
+                    "showNetworkStats": true,
                     "usePrimaryColor": false
                 },
                 {
